--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
        <input type="text" id="txtNom"> <br></br>
   
   <label for="radGrade">Variable pour l'entrée d'un entier?</label>
-  <input type="radio" name="variable1" id="radGrade" value="ParseInt"> ParseInt
+  <input type="radio" name="variable" id="radGrade" value="ParseInt"> ParseInt
    <input type="radio" name="variable" id="radGrade" value="prompt">Prompt
-  <input type="radio" name="varialbe" id="radGrade" value="Alert">Alert <div id = "bon"></div> 
+  <input type="radio" name="variable" id="radGrade" value="Alert">Alert <div id = "bon"></div> <div id = "mauvais"></div> 
   <br></br>
 
   <label for="Valise">Nom de la valise pour faire accéder à une lettre dans un mot?</label>
-  <input type="checkbox" id="valise" name="charAt1" value="charAt">charAt
-  <input type="checkbox" id="valise" name="charAt" value="console">console.log <div id = "bonne"></div>  <br></br>
+  <input type="checkbox" id="valise" name="charAt" value="charAt">charAt
+  <input type="checkbox" id="valise" name="charAt" value="console">console.log <div id = "bonne"></div><div id = "mauvais2"></div>   <br></br>
 
   <label for="selvraioufaux">Vrai ou faux le javascript est un langage de code:</label>
   <select id="selvraioufaux">
   <option value="vrai" id = "vraioufaux1" name="vrai">vrai</option>
        <option value="faux" id = "vraioufaux" name = "faux">faux</option>
-    </select><div id = "bonne1"></div><br></br>
+    </select><div id = "bonne1"></div><div id = "mauvais3"></div> <br></br>
 
     
 
