--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1> Quiz! </h1>
 
   <label for="txtNom">Nom:</label>
-       <input type="text" id="txtNom"> <br></br>
+       <input type="text" id="txtNom"><div id = "erreur"></div> <br></br>
   
   <label for="radGrade">Variable pour l'entrée d'un entier?</label>
   <input type="radio" name="variable" id="radGrade" value="ParseInt"> ParseInt
